# src/v1/routes/google.js
@@ -1,0 +1,10 @@
+const express = require('express')
+
+const { google } = require('../controllers')
+
+const router = express.Router()
+
+router.get('/google/url', google.getOAuthUrl)
+router.get('/google/tokens', google.getAccessTokens)
+
+module.exports = router
